Fix popup emulation covering Description in Mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,8 @@ embed {
 }
 
 #description #popup {
-  width: 253px;
-  height: 621.5px;
+  width: 250px;
+  height: 700px;
 }
 
 p,
